# mavlink-camera-manager

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  build.sh  cross_build_and_run.sh  cursor_file_sink_creation.md  example_dynamic_probe.rs  share
.config/: nextest.toml
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/workflows/: build.yml  cache-cleanup.yml  deploy-unix.yml  deploy-windows.yml  deploy.yml  linux-arm-rtsp.yml  rust.yml  test_compatibility.yml  test_webrtc_leak.yml  test_with_v4l2loopback.yml
agents/: knowledge.md  mavlink.md  pipeline.md  preferences.md  server.md  settings.md  sink.md  stream.md  video.md
api/: Cargo.toml  README.md
api/src/: lib.rs
api/src/v1/: controls.rs  mod.rs  serde_tests.rs  server.rs  signalling.rs  stats.rs  stream.rs  video.rs
api/src/v1/snapshots/: mcm_api__v1__serde_tests__snapshot_answer_available_streams_empty.snap  mcm_api__v1__serde_tests__snapshot_answer_peer_id.snap  mcm_api__v1__serde_tests__snapshot_answer_start_session.snap  mcm_api__v1__serde_tests__snapshot_api_video_source.snap  mcm_api__v1__serde_tests__snapshot_capture_configuration_video.snap  mcm_api__v1__serde_tests__snapshot_control_bool.snap  mcm_api__v1__serde_tests__snapshot_control_default.snap  mcm_api__v1__serde_tests__snapshot_control_menu.snap  mcm_api__v1__serde_tests__snapshot_control_option.snap  mcm_api__v1__serde_tests__snapshot_control_slider.snap  mcm_api__v1__serde_tests__snapshot_control_state.snap  mcm_api__v1__serde_tests__snapshot_control_type_bool.snap  mcm_api__v1__serde_tests__snapshot_control_type_menu.snap  mcm_api__v1__serde_tests__snapshot_control_type_slider.snap  mcm_api__v1__serde_tests__snapshot_control_with_slider.snap  mcm_api__v1__serde_tests__snapshot_development.snap  mcm_api__v1__serde_tests__snapshot_extended_configuration.snap  mcm_api__v1__serde_tests__snapshot_format.snap  mcm_api__v1__serde_tests__snapshot_frame_interval.snap  mcm_api__v1__serde_tests__snapshot_info.snap  mcm_api__v1__serde_tests__snapshot_mavlink_component.snap  mcm_api__v1__serde_tests__snapshot_message_answer_available_streams.snap  mcm_api__v1__serde_tests__snapshot_message_answer_peer_id.snap  mcm_api__v1__serde_tests__snapshot_message_negotiation_ice.snap  mcm_api__v1__serde_tests__snapshot_message_negotiation_media.snap  mcm_api__v1__serde_tests__snapshot_message_question_peer_id.snap  mcm_api__v1__serde_tests__snapshot_message_question_start_session.snap  mcm_api__v1__serde_tests__snapshot_negotiation_ice.snap  mcm_api__v1__serde_tests__snapshot_negotiation_media.snap  mcm_api__v1__serde_tests__snapshot_onvif_device.snap  mcm_api__v1__serde_tests__snapshot_onvif_device_information.snap  mcm_api__v1__serde_tests__snapshot_post_stream.snap  mcm_api__v1__serde_tests__snapshot_question_available_streams.snap  mcm_api__v1__serde_tests__snapshot_question_peer_id.snap  mcm_api__v1__serde_tests__snapshot_question_start_session.snap  mcm_api__v1__serde_tests__snapshot_sdp.snap  mcm_api__v1__serde_tests__snapshot_size.snap  mcm_api__v1__serde_tests__snapshot_stream_information.snap  mcm_api__v1__serde_tests__snapshot_stream_status.snap  mcm_api__v1__serde_tests__snapshot_v4l_control.snap  (+16 more)
bindings/: Cargo.toml  main.rs
clients/: Cargo.toml
clients/src/: browser_webrtc_client.rs  lib.rs  protocol.rs  recording_client.rs  rtsp_client.rs  thumbnail_client.rs  udp_client.rs  webrtc_client.rs  zenoh_client.rs
docker/: Dockerfile  Dockerfile-full  build_and_run.sh
docs/testing/: recording.md
examples/stream_latency/: main.rs  plot_results.py  protocol.rs  rtsp_client.rs  udp_client.rs  webrtc_client.rs
frontend/: .gitignore  README.md  bun.lockb  env.d.ts  index.html  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
frontend/bindings/v1/: api.d.ts  signalling_protocol.d.ts
frontend/src/: App.vue  main.ts  router.ts  session.ts
frontend/src/assets/: base.css  main.css
frontend/src/home/: HomeView.vue
frontend/src/webrtc/: WebRTCView.vue  consumer.ts  manager.ts  session.ts
src/: gstreamer_runner.rs  helper.rs  main.rs  main_command_line.rs  main_web_service.rs  master.rs  mavlink_camera_information.rs  rtsp_server.rs
src/cli/: manager.rs
src/custom/: bluerov.rs  mod.rs  test.rs
src/gst/: gstreamer_runner.rs  mod.rs  pipeline.rs  pipeline_runner.rs  rtsp_server.rs
src/helper/: debug_sync.rs  develop.rs  helper.rs  macros.rs  mod.rs  threads.rs
src/html/: index.html
src/html/webrtc/: index.html  webrtc.js
src/lib/: mod.rs
src/lib/cli/: manager.rs
src/lib/controls/: mod.rs  types.rs
src/lib/custom/: bluerov.rs  mod.rs  test.rs
src/lib/foxglove/: mod.rs
src/lib/helper/: develop.rs  macros.rs  mod.rs  threads.rs  tls.rs
src/lib/logger/: blueos_messages.rs  foxglove_layer.rs  history.rs  manager.rs  mod.rs  zenoh_log_publisher.rs
src/lib/mavlink/: manager.rs  mod.rs  (+4 more)
src/logger/: manager.rs
src/mavlink/: manager.rs  mavlink_camera.rs  mavlink_camera_component.rs  mod.rs  sys_info.rs  utils.rs
src/network/: utils.rs
src/onvif/: client.rs  manager.rs  mod.rs
src/rtsp/: rtsp_server.rs
src/server/: error.rs  manager.rs  mod.rs  pages.rs
src/settings/: manager.rs  settings.rs
src/stream/: manager.rs  mod.rs  rtsp_server.rs  stream.rs  stream_backend.rs  types.rs  video_stream_redirect.rs  video_stream_rtsp.rs  video_stream_tcp.rs  video_stream_udp.rs  video_stream_webrtc.rs
src/video/: gst_device_monitor.rs  mod.rs  types.rs  video_source.rs  video_source_gst.rs  video_source_local.rs  video_source_redirect.rs  video_source_usb.rs  xml.rs
src/video_stream/: types.rs
src2/: main.rs
src2/cli/: manager.rs
src2/manager/: command_line.rs
src2/mavlink/: manager.rs  mavlink_camera.rs  mod.rs
src2/settings/: manager.rs
src2/stream/: mod.rs  stream_backend.rs  video_stream_manager.rs  video_stream_udp.rs
src2/video/: mod.rs  video_source.rs  video_source_usb.rs
tests/: udp_h264_test.rs  v4l2_latency_and_jitter.rs
tests/integration/: main.rs  mavlink_heartbeat.rs  onvif_disabled.rs
(+151 files in other folders)
