[workspace]
members = [
    ".",
    "bindings"
]

[package]
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
description = "An extensible cross-platform camera server built on top of GStreamer and Rust-MAVLink."
edition = "2021"
license = "MIT"
name = "mavlink-camera-manager"
version = "0.2.4"

documentation = "https://github.com/patrickelectric/mavlink-camera-manager"
homepage = "https://github.com/patrickelectric/mavlink-camera-manager"
readme = "README.md"
repository = "https://github.com/patrickelectric/mavlink-camera-manager"

default-run = "mavlink-camera-manager"
build = "build.rs"

[features]
default = []
# WebDriver-based WebRTC test
webrtc-test = ["dep:thirtyfour", "tokio/process"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mavlink_camera_manager"
path = "src/lib/mod.rs"

[[bin]]
bench = false
name = "mavlink-camera-manager"
path = "src/main.rs"

[workspace.dependencies]
regex = { version = "1.10.4", default-features = false }
ts-rs = { version = "8.1.0", default-features = false, features = ["serde-compat", "uuid-impl"] }
uuid = { version = "1.8", default-features = false, features = ["v4", "v5", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context", "suggestions", "color"] }
regex = { workspace = true }

#TODO: Investigate rweb to use openapi spec for free
# https://github.com/kdy1/rweb
async-trait = { version = "0.1.41", default-features = false }
actix-files = { version = "0.6.5", default-features = false }
actix-web = { version = "4.6.0", features = ["rustls"] }
actix-web-validator = { version = "5.0.1", default-features = false }
actix-ws = { version = "0.3.0", default-features = false }
actix-service = { version = "2.0.2", default-features = false }
actix-extensible-rate-limit = { version = "0.3.1", default-features = false, features = ["dashmap"] }
actix-cors = { version = "0.7.0", default-features = false }
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
validator = { version = "0.16", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }

## FINAL
sysinfo = { version = "0.29", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
lazy_static = { version = "1.4.0", default-features = false }
include_dir = { version = "0.7.3", default-features = false }
paperclip = { version = "0.8", default-features = false, features = ["paperclip-actix", "actix4", "swagger-ui", "url", "uuid"] }
#TODO: Replace it with yaserde
quick-xml = { version = "0.31.0", default-features = false, features = ["serialize"] }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
directories = { version = "5.0.1", default-features = false }
pnet = { version = "0.34.0", default-features = false, features = ["std"] }
semver = { version = "1.0", default-features = false }
thirtyfour = { version = "0.32", optional = true, default-features = false, features = ["reqwest"] }
shellexpand = { version = "3.1", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["std", "log", "async-await"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "env-filter", "fmt", "registry", "ansi", "smallvec", "tracing-log"] }
tracing-log = { version = "0.2.0", default-features = false }
tracing-actix-web = { version = "0.7.10", default-features = false }
tracing-gstreamer = { version = "0.7.0", default-features = false }
tracing-tracy = { version = "0.10.5", default-features = false, features = ["ondemand", "broadcast"] }  # Note that these features define the tracy client behavior.
ringbuffer = { version = "0.15.0", default-features = false, features = ["alloc"] }
scopeguard = { version = "1.2.0", default-features = false }
zenoh = { version = "1.5.1", default-features = false }
cdr = { version = "0.2.4", default-features = false }
tempfile = { version = "3.22.0", default-features = false }
thread-priority = { version = "3.0.0", default-features = false }

# This is a custom revision adding file name suffix on top of tracing-appender-0.2.2" "0.2.2", but compatible with the current tracing version.
# Reference: https://github.com/tokio-rs/tracing/issues/2441
tracing-appender = { git = "https://github.com/joaoantoniocardoso/tracing", branch = "tracing-appender-0.2.2-with-filename-suffix", default-features = false }

# Onvif
onvif = { git = "https://github.com/lumeohq/onvif-rs", rev = "8e2408db", default-features = false }
onvif-schema = { git = "https://github.com/lumeohq/onvif-rs", rev = "8e2408db", package = "schema", default-features = false, features = ["analytics", "devicemgmt", "event", "media", "ptz"] }

anyhow = { version = "1", default-features = false }
tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread", "sync", "net", "time", "macros", "io-util"] }
enum_dispatch = { version = "0.3.13", default-features = false }
uuid = { workspace = true }
ts-rs = { workspace = true }
cached = { version = "0.51", default-features = false, features = ["proc_macro", "serde", "serde_json", "async_tokio_rt_multi_thread"] }

## Mavlink (only common dialect used)
mavlink = { version = "0.13.1", default-features = false, features = ["std", "tcp", "udp", "direct-serial", "serde", "common", "emit-extensions", "format-generated-code"] }

## WebRTC
async-tungstenite = { version = "0.25", default-features = false, features = ["tokio-runtime"] }
# Required by turn/webrtc stack; not used directly in this repo
async-std = { version = "1.12", default-features = false, features = ["tokio1"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
webrtc-util = { version = "0.8.1", default-features = false, features = ["vnet"] }
turn = { version = "0.7", default-features = false }

## Image/Thumbnail (only jpeg for thumbnails)
image = { version = "0.24", default-features = false, features = ["jpeg"] }

## GSTREAMER
gst = { package = "gstreamer", version = "0.23", default-features = false, features = ["v1_16"] }
gst-app = { package = "gstreamer-app", version = "0.23", default-features = false, features = ["v1_16"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.23", default-features = false, features = ["v1_16"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.23", default-features = false, features = ["v1_16"] }
gst-rtsp = { package = "gstreamer-rtsp", version = "0.23", default-features = false, features = ["v1_16"] }
gst-rtsp-server = { package = "gstreamer-rtsp-server", version = "0.23", default-features = false, features = ["v1_16"] }
gst-video = { package = "gstreamer-video", version = "0.23", default-features = false, features = ["v1_16"] }
webrtc-sdp = { version = "0.3.13", default-features = false }
constcat = { version = "0.5.0", default-features = false }
glib = { version = "0.20.6", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version = "0.14.0", default-features = false, features = ["v4l2-sys"] }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
serial_test = { version = "0.10", default-features = false, features = ["async"] }
tracing-test = { version = "0.2", default-features = false }

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
vergen-gix = { version = "1.0.9", default-features = false, features = ["build", "cargo"] }
ts-rs = { version = "8.1.0", default-features = false, features = ["serde-compat", "uuid-impl"] }
uuid = { version = "1.8", default-features = false, features = ["v4", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
regex = { version = "1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
