[package]
name = "mcm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["std"] }
ts-rs = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
paperclip = { version = "0.8", optional = true, default-features = false, features = ["paperclip-actix", "actix4", "url", "uuid"] }

[features]
default = []
paperclip = ["dep:paperclip", "dep:serde_json"]
