[package]
name = "stream-clients"
version = "0.1.0"
edition = "2021"
publish = false

[features]
webrtc-test = ["dep:thirtyfour"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "net", "process"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
zenoh = "1.5.1"
cdr = "0.2.4"
chrono = "0.4"
url = "2.5.0"
reqwest = { version = "0.12" }
thirtyfour = { version = "0.32", optional = true }

gst = { package = "gstreamer", version = "0.25", features = ["v1_16"] }
gst-app = { package = "gstreamer-app", version = "0.25", features = ["v1_16"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.25", features = ["v1_16"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.25", features = ["v1_16"] }
